--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-user-info [user]="user" *ngIf="activeStep === 'question'"></app-user-info>
+<!-- <app-user-info [user]="user" *ngIf="activeStep === 'question'"></app-user-info>
 
 <app-registration-form
   *ngIf="activeStep === 'start'"
@@ -10,4 +10,9 @@
   *ngIf="activeStep === 'question'"
 ></app-questionarie>
 
-<h1 *ngIf="activeStep === 'answer'">Youar answers {{ answers | json }}</h1>
+<h1 *ngIf="activeStep === 'answer'">Youar answers {{ answers | json }}</h1> -->
+
+<div class="container mx-auto">
+  <app-home-page></app-home-page>
+  <app-user-detail></app-user-detail>
+</div>
