--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,3 @@
-<!-- <app-user-info [user]="user" *ngIf="activeStep === 'question'"></app-user-info>
-
-<app-registration-form
-  *ngIf="activeStep === 'start'"
-  (start)="startQuestions($event)"
-></app-registration-form>
-
-<app-questionarie
-  (finished)="finished($event)"
-  *ngIf="activeStep === 'question'"
-></app-questionarie>
-
-<h1 *ngIf="activeStep === 'answer'">Youar answers {{ answers | json }}</h1> -->
-
-<div class="container mx-auto">
-  <app-home-page></app-home-page>
-  <app-user-detail></app-user-detail>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
