--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,47 @@
-<div
-  style="
-    background: rosybrown;
-    font-size: 50px;
-    text-align: center;
-    color: white; ;
-  "
->
-  <a [routerLink]="'home'" style="margin-right: 10px">Home</a>
-  <a [routerLink]="'profile'">Profile</a>
-  Welcome to the website
+<div class="full-container">
+  <div class="left-side">
+    <div>
+      <i class="fas fa-smile"></i>
+    </div>
+    <div>
+      <i class="fas fa-tachometer-slowest">Dashboard</i>
+    </div>
+    <div>
+      <i class="fas fa-cog">Components</i>
+    </div>
+    <div>
+      <i class="fas fa-wrench">Utilities</i>
+    </div>
+    <div>
+      <i class="fas fa-folder">Pages</i>
+    </div>
+    <div>
+      <i class="fas fa-chart-scatter">Charts</i>
+    </div>
+  </div>
+  
+  
+  
+  <nav>
+    <div class="nav_container">
+      <div>
+        <i class="fas fa-bars"></i>
+      </div>
+      <div class="nav_input">
+        <input type="text" placeholder="Search for...">
+        <button><i class="fas fa-search"></i></button>
+      </div>
+      <div class="nav_icons">
+        <div class="first">
+          <i class="fas fa-bell"></i>
+          <i class="fas fa-envelope"></i>
+        </div>
+        <div>
+          <i class="fas fa-user-circle"></i>
+        </div>
+      </div>
+    </div>
+  </nav>
 </div>
+
+
