--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="home">
+    <app-header></app-header>
+    <app-home-page></app-home-page>
+</div>
+<!-- <router-outlet></router-outlet>
+<app-footer></app-footer> -->
